# tool-calling-demo

./: .gitignore  CLI_AUDIT.md  README.md  UPSTREAM_PORT.md
calculus-agent/: .template-info  AGENTS.md  CLAUDE.md  Containerfile  Makefile  agent.yaml  deploy.sh  pyproject.toml
calculus-agent/chart/: Chart.yaml  values.yaml
calculus-agent/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
calculus-agent/evals/: README.md  mock_factory.py
calculus-agent/prompts/: system.md
calculus-agent/rules/: citation_required.md
calculus-agent/src/: agent.py  server.py
calculus-agent/tests/: test_agent.py  test_config.py  test_example_agent.py  test_llm.py  test_memory.py  test_prompts.py  test_rules.py  test_skills.py  test_tools.py
calculus-gateway/: .template-info  CLAUDE.md  Containerfile  Makefile  README.md  go.mod
calculus-gateway/chart/: Chart.yaml  values.yaml
calculus-gateway/chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  route.yaml  service.yaml
calculus-gateway/cmd/server/: main.go
calculus-gateway/internal/config/: config.go
calculus-gateway/internal/handler/: chat.go  chat_test.go  health_test.go  wellknown_test.go
calculus-gateway/internal/middleware/: logging_test.go
calculus-gateway/internal/proxy/: sse_test.go
calculus-ui/: .template-info  CLAUDE.md  Containerfile  Makefile  README.md  go.mod
calculus-ui/chart/: Chart.yaml  values.yaml
calculus-ui/static/: app.js  index.html  style.css
retrospectives/2026-04-17_initial-build/: RETRO.md
(+7 files in other folders)
